# soap-rust

./: .gitignore  Cargo.toml  README.md
src/: basis.rs  geometry.rs  integrals.rs  main.rs  math.rs  soap.rs  structure.rs
src/math/: linalg.rs  misc.rs  mod.rs  msbf.rs  sphr.rs
tests/: h2.xyz
