[package]
name = "soap"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = {version = "^4", features=["derive"]}
rand = "*"
GSL = "*"
ndarray = "*"
ndarray-linalg = { version = "0.13" }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true
opt-level = "s"

[profile.dev]
opt-level = "s"
